--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-multilevel-dropdown": "^4.0.0",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.24.0",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.8.0",
     "reactstrap": "^9.2.2",
     "web-vitals": "^2.1.4",
     "webpack": "^5.92.1"
