--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "contentful": "^10.12.14",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "firebase": "^10.12.2",
