--- a/.env.development
+++ b/.env.development
@@ -8,3 +8,5 @@ REACT_APP_ACCESS_TOKEN_CAREER_ADDITIONAL_TILE = l91vCloUoQ3gLwt_VfN9h8W3INEvIgrH
 
 REACT_APP_ACCESS_TOKEN_DEGREE_GENERAL_TILE = 6G3eQLCQIOq3u5iwX7zdyF4KkN-XdlXk6djIgO7Bgf0
 REACT_APP_ACCESS_TOKEN_DEGREE_ADDITIONAL_TILE = 3rvNaVfBb3N2CcJtU91hVbiTUxsV73glVwqEBoGvhks
+
+REACT_APP_ACCESS_TOKEN_TALK_TO_AN_EXPERT = PAOPCz5F0jWVxkFIb1yND893nVVBjKVKYXfX4JVOjWw
