--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.3",
+    "react-bootstrap": "^2.10.4",
+    "react-callout": "^0.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-joyride": "^2.8.2",
     "react-modal": "^3.16.1",
     "react-multilevel-dropdown": "^4.0.0",
     "react-pro-sidebar": "^1.1.0",
