--- a/.env.development
+++ b/.env.development
@@ -10,3 +10,5 @@ REACT_APP_ACCESS_TOKEN_DEGREE_GENERAL_TILE = 6G3eQLCQIOq3u5iwX7zdyF4KkN-XdlXk6dj
 REACT_APP_ACCESS_TOKEN_DEGREE_ADDITIONAL_TILE = 3rvNaVfBb3N2CcJtU91hVbiTUxsV73glVwqEBoGvhks
 
 REACT_APP_ACCESS_TOKEN_TALK_TO_AN_EXPERT = PAOPCz5F0jWVxkFIb1yND893nVVBjKVKYXfX4JVOjWw
+
+REACT_APP_ACCESS_TOKEN_RESOURCE_TILE = FhW8AkoH9nUfjSC9hrMqJhyEP2fHQSXj-rqiWsVpO0k
